--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RNCodeTest</string>
     <string name="service_key">MmHsCMUt57</string>
+    <string name="release_service_key">le475jUm1D</string>
 </resources>
